# CV007

./: CMakeLists.txt  README.md  READ_ME.txt  main.cpp
CV007/: foodDetectionLibs.cpp  foodDetectionLibs.h  foodSegBoxLibs.cpp  foodSegBoxLibs.h  foodSegBoxLibsOld.h  foodWaste.cpp  metricsLibs.cpp  metricsLibs.h
tray_images/: insalatone
